USER INSTALLABLE IS HERE LETS GOOOO!!!! (thanks <@704757796599496714> for the motivation) updated stuff, and more!